# nanotse

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: ci.yml
configs/: 3060.yaml  3060_full.yaml  3060_v2.yaml  3060_v3.yaml  3060_v4_control.yaml  3060_v4_no_slots.yaml  3060_v5.yaml  3060_v6.yaml  3060_v6_smoke.yaml  3060_v7_27m.yaml  a100.yaml  a100_v1.yaml  colab_a100_v1.yaml  smoke.yaml
data/smoke/: manifest.json
docs/: ARCHITECTURE.md  CHANGELOG.md  COLAB_SETUP.md  PLAN.md
nanotse/: __init__.py
nanotse/data/: __init__.py  sampler.py  voxceleb2_mix.py  voxceleb2_mix_loader.py
nanotse/eval/: __init__.py  diagnose.py  iba.py  latency_bench.py
nanotse/losses/: __init__.py  asd_bce.py  consistency.py  infonce.py  mag_stft.py  mel_loss.py  si_snr.py
nanotse/models/: __init__.py  nanotse.py
nanotse/models/backbones/: __init__.py  chunk_attn.py
nanotse/models/baselines/: __init__.py  memo.py  tdse.py
nanotse/models/frontends/: __init__.py  audio_stft.py  enrollment.py  visual_avhubert.py
nanotse/models/fusion/: __init__.py  dual_cache.py
nanotse/models/heads/: __init__.py  asd.py  tse.py
nanotse/models/memory/: __init__.py  slot_attention.py
nanotse/training/: __init__.py  checkpoint.py  ema.py  eval.py  losses.py  schedule.py
nanotse/utils/: __init__.py  config.py  tracker.py
notebooks/: colab_train.ipynb
scripts/: diagnose.py  full_pipeline.sh  post_train_chain.sh  prepare_for_colab.sh  train.py  visualize.py  visualize_peer_compare.py
scripts/data_prep/: build_manifest_from_disk.py  extract_from_local_tars.py  extract_mouth_roi.py  fetch_voxceleb2_mix_smoke.py  fetch_voxceleb2_video.py  filter_manifest_by_face_ok.py  parallel_download_video.py  verify_dataset.py
tests/: test_asd_head.py  test_audio_frontend.py  test_chunk_attn.py  test_config.py  test_data.py  test_diagnose.py  test_dual_cache.py  test_enrollment.py  test_iba.py  test_import.py  test_latency_bench.py  test_losses.py  test_memo.py  test_nanotse_assembly.py  test_real_face_cache.py  test_sampler.py  test_si_snr.py  test_slot_memory.py  test_smoke_overfit.py  test_tdse.py  test_tier2_training.py  test_tracker.py  test_train_loss_schedule.py  test_training_loop.py  test_tse_head.py  test_visual_frontend.py  test_voxceleb2_loader.py  test_w24_real_speech_gate.py
